--- a/Uplift Modeling Introduction.Rmd
+++ b/Uplift Modeling Introduction.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Uplift Modeling Introduction"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Rebecca DeCrescenzo"
 date: "6/23/2021"
 output: html_document
